--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
+  },
+  "devDependencies": {
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^13.1.2"
   }
 }
