--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1467.0",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   },
