--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,15 @@
 org: narendranr
 app: aws-node-express-dynamo-api
 service: aws-node-express-dynamo-api
-frameworkVersion: '3'
+frameworkVersion: "3"
 
 custom:
-  tableName: 'users-table-${sls:stage}'
+  tableName: "users-table-${sls:stage}"
+  dynamodb:
+    start:
+      migrate: true
+    stages:
+      - dev
 
 provider:
   name: aws
@@ -21,7 +26,7 @@ provider:
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
           Resource:
-            - Fn::GetAtt: [ UsersTable, Arn ]
+            - Fn::GetAtt: [UsersTable, Arn]
   environment:
     USERS_TABLE: ${self:custom.tableName}
 
@@ -29,7 +34,7 @@ functions:
   api:
     handler: index.handler
     events:
-      - httpApi: '*'
+      - httpApi: "*"
 
 resources:
   Resources:
