--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1467.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "serverless-dynamodb-local": "^0.2.40",
+    "@aws-sdk/client-dynamodb": "^3.421.0",
+    "@aws-sdk/lib-dynamodb": "^3.421.0",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-dynamodb": "^0.2.43",
     "serverless-offline": "^13.1.2"
   }
 }
