--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.421.0",
     "@aws-sdk/lib-dynamodb": "^3.421.0",
-    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-dynamodb": "^0.2.43",
     "serverless-offline": "^13.1.2"
+  },
+  "scripts": {
+    "sls_offline_start_local": "AWS_ACCESS_KEY_ID=default AWS_SECRETE_ACCESS_KEY=default AWS_REGION=us-east-1 sls offline start --stage local"
   }
 }
