--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "joi": "^17.10.2",
     "serverless-http": "^3.1.1",
     "uuid": "^9.0.1"
   },
