--- a/serverless.yml
+++ b/serverless.yml
@@ -13,7 +13,7 @@ custom:
       migrate: true
       seed: true
       convertEmptyValues: true
-      noStart: true
+      # noStart: true
     stages:
       - local
 
